--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ https://www.googletagmanager.com/gtag/js?id=UA-179015764-1
 
     <section class="jumbotron text-center">
         <div class="container">
-            <h1 class="jumbotron-heading jumbotron-heading-home">Welcome to Coupon Site!</h1>
+            <h1 class="jumbotron-heading jumbotron-heading-home">Welcome to Coupon Site Agrotech!</h1>
             <p class="lead text-muted">Save up to $100 a week on what you do every day!</p>
         </div>
     </section>
